# fOper

./: .gitignore  CMakeLists.txt  CONFIG.md  CONFIG_COPY_FILE.md  CONFIG_GEN_FILE.md  main.c
action/: action.h  delete.c  delete.h  move.c  move.h  syscall.c  syscall.h  write.c  write.h
action/copy_file/: copy_file.c  copy_file.h  property.c  property.h
action/gen_file/: delete.c  syscall.c  syscall.h
cmd/: cmd.h  copy_file.c  copy_file.h  gen_file.c  gen_file.h
common/: common.c  common.h  global.c  global.h
common/arch/linux/: common.c  common.h
config/: config.c  config.h  config.yaml  config_copy.yaml  config_inner.h
file/: file_interface.h  file_trait.h  std_file_wrapper.c  std_file_wrapper.h  trait.h
file/arch/linux/: acl.c  acl.h  attr.c  attr.h  dir.c  dir.h  foper.c  foper.h  ftime.c  ftime.h  linux_foper.c  linux_foper.h  strptime.c  strptime.h  xattr.c  xattr.h
test/: config_test.c  hy.yaml  linux_foper_acl_test.c  linux_foper_attr_test.c  linux_foper_test.c  linux_foper_xattr_test.c
